--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,12 @@
   vertical-align: text-top !important; }
 
 .bg-primary {
-  background-color: #007bff !important; }
+  background-color: #29ade5 !important; }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #0062cc !important; }
+  background-color: #1890c3 !important; }
 
 .bg-secondary {
   background-color: #6c757d !important; }
@@ -117,7 +117,7 @@ button.bg-dark:focus {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #007bff !important; }
+  border-color: #29ade5 !important; }
 
 .border-secondary {
   border-color: #6c757d !important; }
@@ -2866,10 +2866,10 @@ button.bg-dark:focus {
   color: #fff !important; }
 
 .text-primary {
-  color: #007bff !important; }
+  color: #29ade5 !important; }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #0056b3 !important; }
+  color: #157fad !important; }
 
 .text-secondary {
   color: #6c757d !important; }
@@ -3713,7 +3713,7 @@ a.text-dark:hover, a.text-dark:focus {
     text-decoration: none; }
   .btn:focus, .btn.focus {
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
+    box-shadow: 0 0 0 0.2rem rgba(41, 173, 229, 0.25); }
   .btn.disabled, .btn:disabled {
     opacity: 0.65; }
 
@@ -3723,24 +3723,24 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #007bff;
-  border-color: #007bff; }
+  background-color: #29ade5;
+  border-color: #29ade5; }
   .btn-primary:hover {
     color: #fff;
-    background-color: #0069d9;
-    border-color: #0062cc; }
+    background-color: #1999cf;
+    border-color: #1890c3; }
   .btn-primary:focus, .btn-primary.focus {
-    box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(73, 185, 233, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff; }
+    background-color: #29ade5;
+    border-color: #29ade5; }
   .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
     color: #fff;
-    background-color: #0062cc;
-    border-color: #005cbf; }
+    background-color: #1890c3;
+    border-color: #1688b8; }
     .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5); }
+      box-shadow: 0 0 0 0.2rem rgba(73, 185, 233, 0.5); }
 
 .btn-secondary {
   color: #fff;
@@ -3890,23 +3890,23 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5); }
 
 .btn-outline-primary {
-  color: #007bff;
-  border-color: #007bff; }
+  color: #29ade5;
+  border-color: #29ade5; }
   .btn-outline-primary:hover {
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff; }
+    background-color: #29ade5;
+    border-color: #29ade5; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(41, 173, 229, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #007bff;
+    color: #29ade5;
     background-color: transparent; }
   .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff; }
+    background-color: #29ade5;
+    border-color: #29ade5; }
     .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5); }
+      box-shadow: 0 0 0 0.2rem rgba(41, 173, 229, 0.5); }
 
 .btn-outline-secondary {
   color: #6c757d;
@@ -4043,10 +4043,10 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #007bff;
+  color: #29ade5;
   text-decoration: none; }
   .btn-link:hover {
-    color: #0056b3;
+    color: #157fad;
     text-decoration: underline; }
   .btn-link:focus, .btn-link.focus {
     text-decoration: underline;
@@ -4120,14 +4120,40 @@ input[type="button"].btn-block {
   padding: 0;
   box-sizing: border-box; }
 
-.bg-Img {
+h1, p {
+  font-family: "Josefin Sans", sans-serif; }
+
+.background-carousel {
   background-image: url("../images/landing.jpg");
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover; }
+  background-size: cover;
+  width: 100%;
+  height: 667px; }
+
+.brand-size {
+  width: 100%;
+  height: 80px; }
 
 .logo-size {
-  width: 50%;
-  height: 50%; }
+  width: 160px;
+  height: 60px; }
+
+.icon-size {
+  width: 70px;
+  height: 70px; }
+
+.icon-size:hover {
+  color: #29ade5; }
+
+.quotes {
+  display: none; }
+
+.resize-font {
+  font-size: 1.5rem; }
+
+@media (min-width: 1025px) {
+  .background-carousel {
+    width: 100%;
+    height: 1080px; } }
 
 /*# sourceMappingURL=style.css.map */
