--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+@font-face {
+  font-family: 'Pure Pakati';
+  src: url(../images/assets/fonts/pure-pakati/PurePakati-Regular.otf); }
 .align-baseline {
   vertical-align: baseline !important; }
 
