--- a/css/style.css
+++ b/css/style.css
@@ -76,12 +76,12 @@ button.bg-light:focus {
   background-color: #dae0e5 !important; }
 
 .bg-dark {
-  background-color: #343a40 !important; }
+  background-color: black !important; }
 
 a.bg-dark:hover, a.bg-dark:focus,
 button.bg-dark:hover,
 button.bg-dark:focus {
-  background-color: #1d2124 !important; }
+  background-color: black !important; }
 
 .bg-white {
   background-color: #fff !important; }
@@ -141,7 +141,7 @@ button.bg-dark:focus {
   border-color: #f8f9fa !important; }
 
 .border-dark {
-  border-color: #343a40 !important; }
+  border-color: black !important; }
 
 .border-white {
   border-color: #fff !important; }
@@ -2911,10 +2911,10 @@ a.text-light:hover, a.text-light:focus {
   color: #cbd3da !important; }
 
 .text-dark {
-  color: #343a40 !important; }
+  color: black !important; }
 
 a.text-dark:hover, a.text-dark:focus {
-  color: #121416 !important; }
+  color: black !important; }
 
 .text-body {
   color: #212529 !important; }
@@ -3873,24 +3873,24 @@ fieldset:disabled a.btn {
 
 .btn-dark {
   color: #fff;
-  background-color: #343a40;
-  border-color: #343a40; }
+  background-color: black;
+  border-color: black; }
   .btn-dark:hover {
     color: #fff;
-    background-color: #23272b;
-    border-color: #1d2124; }
+    background-color: black;
+    border-color: black; }
   .btn-dark:focus, .btn-dark.focus {
-    box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(38, 38, 38, 0.5); }
   .btn-dark.disabled, .btn-dark:disabled {
     color: #fff;
-    background-color: #343a40;
-    border-color: #343a40; }
+    background-color: black;
+    border-color: black; }
   .btn-dark:not(:disabled):not(.disabled):active, .btn-dark:not(:disabled):not(.disabled).active, .show > .btn-dark.dropdown-toggle {
     color: #fff;
-    background-color: #1d2124;
-    border-color: #171a1d; }
+    background-color: black;
+    border-color: black; }
     .btn-dark:not(:disabled):not(.disabled):active:focus, .btn-dark:not(:disabled):not(.disabled).active:focus, .show > .btn-dark.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5); }
+      box-shadow: 0 0 0 0.2rem rgba(38, 38, 38, 0.5); }
 
 .btn-outline-primary {
   color: #29ade5;
@@ -4026,23 +4026,23 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(248, 249, 250, 0.5); }
 
 .btn-outline-dark {
-  color: #343a40;
-  border-color: #343a40; }
+  color: black;
+  border-color: black; }
   .btn-outline-dark:hover {
     color: #fff;
-    background-color: #343a40;
-    border-color: #343a40; }
+    background-color: black;
+    border-color: black; }
   .btn-outline-dark:focus, .btn-outline-dark.focus {
-    box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.5); }
   .btn-outline-dark.disabled, .btn-outline-dark:disabled {
-    color: #343a40;
+    color: black;
     background-color: transparent; }
   .btn-outline-dark:not(:disabled):not(.disabled):active, .btn-outline-dark:not(:disabled):not(.disabled).active, .show > .btn-outline-dark.dropdown-toggle {
     color: #fff;
-    background-color: #343a40;
-    border-color: #343a40; }
+    background-color: black;
+    border-color: black; }
     .btn-outline-dark:not(:disabled):not(.disabled):active:focus, .btn-outline-dark:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-dark.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5); }
+      box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.5); }
 
 .btn-link {
   font-weight: 400;
@@ -4123,7 +4123,14 @@ input[type="button"].btn-block {
   padding: 0;
   box-sizing: border-box; }
 
-h1, p {
+ul li {
+  list-style-type: none; }
+
+h1 {
+  text-shadow: 2px 2px rgba(0, 0, 0, 0.4);
+  font-family: "Josefin Sans", sans-serif; }
+
+p, ol {
   font-family: "Josefin Sans", sans-serif; }
 
 .background-carousel {
@@ -4148,15 +4155,100 @@ h1, p {
 .icon-size:hover {
   color: #29ade5; }
 
-.quotes {
-  display: none; }
-
 .resize-font {
   font-size: 1.5rem; }
 
-@media (min-width: 1025px) {
+.fa-home {
+  font-size: 2rem; }
+
+#appInfo:hover {
+  transform: scale(1.5);
+  color: black; }
+
+/*  style the modal screen */
+.location-modal, .info-modal {
+  display: none;
+  position: fixed;
+  background-color: white;
+  height: 100%;
+  width: 100%;
+  z-index: 3;
+  left: 0;
+  top: 0;
+  overflow: auto;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4); }
+
+.closeBar {
+  font-size: 2.3rem;
+  position: absolute;
+  right: 12%;
+  top: 7%; }
+
+#modalContent, #modalContentInfo {
+  background-color: white; }
+
+.img-size {
+  width: 550px;
+  height: 250px; }
+
+.text-size {
+  font-size: 12px; }
+
+/*  Add Zoom Animation for modal  */
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s; }
+
+@-webkit-keyframes animatezoom {
+  from {
+    -webkit-transform: scale(0); }
+  to {
+    -webkit-transform: scale(1); } }
+@keyframes animatezoom {
+  from {
+    transform: scale(0); }
+  to {
+    transform: scale(1); } }
+@media (max-width: 600px) {
+  .quotes, .social-desktop {
+    display: none; } }
+@media (min-width: 600px) {
   .background-carousel {
     width: 100%;
-    height: 1080px; } }
+    height: 1024px; } }
+@media only screen and (min-width: 768px) {
+  .background-carousel {
+    width: 100%;
+    height: 1024px; }
+
+  .fa-twitter, .fa-instagram, .fa-facebook-f, .fa-youtube {
+    color: white;
+    font-size: 2rem; }
+
+  .fa-twitter:hover, .fa-instagram:hover, .fa-facebook-f:hover, .fa-youtube:hover {
+    color: black;
+    transform: scale(1.5); } }
+@media (min-width: 992px) {
+  .background-carousel {
+    width: 100%;
+    height: 1030px; }
+
+  .brand-size {
+    height: 200px; }
+
+  .resize-font {
+    font-size: 3rem; }
+
+  .quotes {
+    font-size: 1.2rem; }
+
+  .banner-border {
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 1200px; }
+
+  .img-size {
+    width: 550px;
+    height: 250px; } }
 
 /*# sourceMappingURL=style.css.map */
