--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,8 @@
 $primary: #29ade5;
 $h1-font-size: 2rem;
 $font-family-sans-serif: 'Josefin Sans', sans-serif;
-
-
+$shadow: 5px 10px 10px #888888;
+$dark: black;
 
 @font-face{
   font-family: 'Pure Pakati';
@@ -33,13 +33,17 @@ $font-family-sans-serif: 'Josefin Sans', sans-serif;
   box-sizing: border-box;
 }
 
-body {
-
+ul li {
+  list-style-type: none;
 }
 
 
+h1 {
+  text-shadow: 2px 2px rgba(0,0,0,0.4);
+  font-family: $font-family-sans-serif;
+}
 
-h1, p {
+p, ol {
   font-family: $font-family-sans-serif;
 }
 
@@ -73,21 +77,154 @@ h1, p {
   color: $primary;
 }
 
-.quotes {
-  display: none;
-}
-
 
 .resize-font {
   font-size: 1.5rem;
 }
 
+.fa-home {
+  font-size: 2rem;
+}
+
+#appInfo:hover {
+  transform: scale(1.5);
+  color: black;
+}
+
+
+/*  style the modal screen */
+.location-modal, .info-modal {
+  display: none;
+  position: fixed;
+  background-color: white;
+  height: 100%;
+  width: 100%;
+  z-index: 3;
+  left: 0;
+  top: 0;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+
+}
+
+.closeBar {
+  font-size: 2.3rem;
+  position: absolute;
+  right: 12%;
+  top: 7%;
+}
+
+#modalContent, #modalContentInfo {
+  background-color: white;
+  // margin-left: auto;
+  // margin-right: auto;
+  // border: 5px solid #90b9a9;
+  // width: 40%;
+  // height: 1000px;
+  // margin-top: 10%;
+}
+
+.img-size {
+  width: 550px;
+  height: 250px;
+}
+
+
+.text-size {
+  font-size: 12px;
+}
 
 
 
-@media (min-width: 1025px){
+/*  Add Zoom Animation for modal  */
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+    from {-webkit-transform: scale(0)}
+    to {-webkit-transform: scale(1)}
+}
+
+@keyframes animatezoom {
+    from {transform: scale(0)}
+    to {transform: scale(1)}
+}
+
+
+
+
+@media (max-width: 600px){
+  .quotes, .social-desktop {
+    display: none;
+  }
+
+
+}
+
+
+@media (min-width: 600px){
   .background-carousel{
     width: 100%;
-    height: 1080px;
+    height: 1024px;
   }
+
+
+
+
+}
+
+@media only screen and (min-width: 768px) {
+  .background-carousel{
+    width: 100%;
+    height: 1024px;
+  }
+
+  .fa-twitter ,.fa-instagram, .fa-facebook-f, .fa-youtube {
+    color: white;
+    font-size: 2rem;
+  }
+
+
+  .fa-twitter:hover ,.fa-instagram:hover, .fa-facebook-f:hover, .fa-youtube:hover {
+    color: black;
+    transform: scale(1.5);
+  }
+}
+
+
+@media (min-width: 992px){
+  .background-carousel{
+    width: 100%;
+    height: 1030px;
+  }
+
+  .brand-size {
+    height: 200px;
+  }
+
+
+  .resize-font {
+    font-size: 3rem;
+  }
+
+  .quotes {
+    font-size: 1.2rem;
+  }
+
+  .banner-border {
+    background-color: rgba(0,0,0,0.4);
+    width: 1200px;
+  }
+
+  .img-size {
+    width: 550px;
+    height: 250px;
+  }
+
+
+
+
 }
