--- a/sass/style.scss
+++ b/sass/style.scss
@@ -224,7 +224,16 @@ p, ol {
     height: 250px;
   }
 
-
-
+  // .desktop-border {
+  //   width: 80%;
+  //   height: 500px;
+  //   margin: 5rem;
+  //   margin-top: 15rem;
+  // }
+  //
+  // .closeBar {
+  //   right: 18%;
+  //
+  // }
 
 }
