--- a/css/style.css
+++ b/css/style.css
@@ -4179,7 +4179,7 @@ p, ol {
   background-color: black;
   background-color: rgba(0, 0, 0, 0.4); }
 
-.closeBar {
+.close-bar {
   font-size: 2.3rem;
   position: absolute;
   right: 12%;
