--- a/sass/style.scss
+++ b/sass/style.scss
@@ -93,7 +93,7 @@ p, ol {
 
 
 /*  style the modal screen */
-.location-modal, .info-modal {
+.location-modal, .info-modal, #myModal {
   display: none;
   position: fixed;
   background-color: white;
@@ -115,7 +115,7 @@ p, ol {
   top: 7%;
 }
 
-#modalContent, #modalContentInfo {
+#modalContentInfo, #modalContent{
   background-color: white;
   // margin-left: auto;
   // margin-right: auto;
@@ -124,6 +124,7 @@ p, ol {
   // height: 1000px;
   // margin-top: 10%;
 }
+
 
 .img-size {
   width: 550px;
