--- a/css/style.css
+++ b/css/style.css
@@ -4185,8 +4185,12 @@ p, ol {
   right: 12%;
   top: 7%; }
 
-#modalContentInfo, #modalContent {
+#modalContentInfo {
   background-color: white; }
+
+.modal-size {
+  width: 100%;
+  height: auto; }
 
 .img-size {
   width: 550px;
