--- a/sass/style.scss
+++ b/sass/style.scss
@@ -168,6 +168,17 @@ p, ol {
   width: 20rem;
 }
 
+#map {
+  width: 800px;
+  height: 500px;
+  background-color: black;
+}
+
+
+.marker-img-size {
+  width: 250px;
+  height: 150px;
+}
 // .re-position {
 //   z-index: 1;
 //   top: 30%;
