--- a/css/style.css
+++ b/css/style.css
@@ -4683,20 +4683,6 @@ p, ol {
   transform: scale(1.5);
   color: black; }
 
-/*  style the modal screen */
-.info-modal {
-  display: none;
-  position: fixed;
-  background-color: white;
-  height: 100%;
-  width: 100%;
-  z-index: 3;
-  left: 0;
-  top: 0;
-  overflow: auto;
-  background-color: black;
-  background-color: rgba(0, 0, 0, 0.4); }
-
 .close {
   color: #fff;
   opacity: 1; }
@@ -4723,8 +4709,8 @@ p, ol {
   width: 20rem; }
 
 #map {
-  width: 800px;
-  height: 500px;
+  width: 340px;
+  height: 400px;
   background-color: black; }
 
 .marker-img-size {
@@ -4736,7 +4722,15 @@ p, ol {
 
 @media (max-width: 600px) {
   .quotes, .social-desktop, #imgBanner, #map {
-    display: none; } }
+    display: none; }
+
+  .background-carousel {
+    width: 100%;
+    height: 667px; } }
+@media (min-width: 500px) {
+  .background-carousel {
+    width: 100%;
+    height: 1020px; } }
 @media (min-width: 600px) {
   .background-carousel {
     width: 100%;
@@ -4781,10 +4775,14 @@ p, ol {
     height: 300px; }
 
   .re-position {
-    top: 60%;
+    top: 55%;
     left: 45%; }
 
   .card-size {
-    width: 23rem; } }
+    width: 23rem; }
+
+  #map {
+    width: 800px;
+    height: 500px; } }
 
 /*# sourceMappingURL=style.css.map */
