--- a/sass/style.scss
+++ b/sass/style.scss
@@ -112,21 +112,6 @@ p, ol {
 }
 
 
-/*  style the modal screen */
-.info-modal {
-  display: none;
-  position: fixed;
-  background-color: white;
-  height: 100%;
-  width: 100%;
-  z-index: 3;
-  left: 0;
-  top: 0;
-  overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
-
-}
 
 // style close button color
 .close {
@@ -168,9 +153,10 @@ p, ol {
   width: 20rem;
 }
 
+
 #map {
-  width: 800px;
-  height: 500px;
+  width: 340px;
+  height: 400px;
   background-color: black;
 }
 
@@ -179,11 +165,6 @@ p, ol {
   width: 250px;
   height: 150px;
 }
-// .re-position {
-//   z-index: 1;
-//   top: 30%;
-//   left: 30%;
-// }
 
 
 //  set icon for cursor pointer
@@ -200,8 +181,24 @@ p, ol {
     display: none;
   }
 
+  .background-carousel{
+    width: 100%;
+    height: 667px;
+  }
+
 }
 
+
+// display for phone screen size
+@media (min-width: 500px){
+
+  .background-carousel{
+    width: 100%;
+    height: 1020px;
+  }
+
+
+}
 
 // display for biggger phone scren size
 @media (min-width: 600px){
@@ -271,7 +268,7 @@ p, ol {
   }
 
   .re-position {
-    top: 60%;
+    top: 55%;
     left: 45%;
 
   }
@@ -280,5 +277,10 @@ p, ol {
     width: 23rem;
   }
 
+  #map {
+    width: 800px;
+    height: 500px;
+
+  }
 
 }
