--- a/css/style.css
+++ b/css/style.css
@@ -4733,14 +4733,14 @@ p, ol {
 @media (min-width: 500px) {
   .background-carousel {
     width: 100%;
-    height: 1020px; }
+    height: 1050px; }
 
   #map {
     display: none; } }
 @media (min-width: 600px) {
   .background-carousel {
     width: 100%;
-    height: 1024px; } }
+    height: 1300px; } }
 @media only screen and (min-width: 768px) {
   .background-carousel {
     width: 100%;
@@ -4793,5 +4793,13 @@ p, ol {
 
   .mobile {
     display: none; } }
+@media (min-width: 1200px) {
+  .background-carousel {
+    width: 100%;
+    height: 1150px; }
+
+  .re-position {
+    top: 48%;
+    left: 45%; } }
 
 /*# sourceMappingURL=style.css.map */
