--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,18 +1,11 @@
 // customised variable from bootstrap
-$primary: #29ade5;
-$h1-font-size: 2rem;
-$font-family-sans-serif: 'Josefin Sans', sans-serif;
-$shadow: 5px 10px 10px #888888;
-$dark: black;
-$body-color: black;
-$grey: #2b2f3a;
-
-
-// import fonts type
-@font-face{
-  font-family: 'Pure Pakati';
-  src: url(../images/assets/fonts/pure-pakati/PurePakati-Regular.otf);
-}
+$primary:#29ADE5;
+$h1-font-size:2rem;
+$font-family-sans-serif:'Josefin Sans', sans-serif;
+$shadow:5px 10px 10px #888888;
+$dark:black;
+$body-color:black;
+$grey:#2B2F3A;
 
 
 // Include parts of Bootstrap
@@ -33,6 +26,13 @@ $grey: #2b2f3a;
 @import "bootstrap-4.3.1/scss/modal";
 
 
+// import fonts type
+@font-face{
+  font-family: 'Pure Pakati';
+  src: url('../images/assets/fonts/pure-pakati/PurePakati-Regular.otf');
+}
+
+
 // reset
 * {
   margin: 0;
@@ -44,12 +44,12 @@ $grey: #2b2f3a;
 // typography
 h1 {
   text-shadow: 2px 2px rgba(0,0,0,0.4);
-  font-family: 'Pure Pakati';
+  font-family: 'Pure Pakati', sans-serif;
 }
 
 
 h3 {
-  font-family: 'Pure Pakati';
+  font-family: 'Pure Pakati', sans-serif;
 }
 
 
@@ -58,7 +58,7 @@ p, ol {
 }
 
 .para-Style {
-  font-family: 'Pure Pakati';
+  font-family: 'Pure Pakati', sans-serif;
   font-size: 2rem;
 }
 
@@ -82,7 +82,7 @@ p, ol {
 
 .logo-size {
   width: 160px;
-  height: 60px;
+  height: 50px;
 }
 
 
@@ -157,6 +157,7 @@ p, ol {
 }
 
 
+
 #map {
   width: 340px;
   height: 400px;
@@ -171,7 +172,7 @@ p, ol {
 
 
 //  set icon for cursor pointer
-.fas {
+.fa-home {
   cursor: pointer;
 }
 
@@ -180,7 +181,7 @@ p, ol {
 
 // display for phone screen size
 @media (max-width: 600px){
-  .quotes, .social-desktop, #imgBanner, #mobileDisplay, .desktop{
+  .quotes, .social-desktop, #imgBanner, #mobileDisplay, .desktop, #homeLogo, #map{
     display: none;
   }
 
@@ -189,11 +190,15 @@ p, ol {
     height: 667px;
   }
 
+  .p-adjust-mobile {
+    padding-left: 1rem;
+  }
+
 }
 
 
 // display for phone screen size
-@media (min-width: 500px){
+@media only screen and (min-width: 400px){
 
   .background-carousel{
     width: 100%;
@@ -204,10 +209,11 @@ p, ol {
     display: none;
   }
 
+
 }
 
 // display for biggger phone scren size
-@media (min-width: 600px){
+@media only screen and (min-width: 600px){
   .background-carousel{
     width: 100%;
     height: 1300px;
@@ -233,11 +239,17 @@ p, ol {
     color: black;
     transform: scale(1.5);
   }
+
+  .re-position {
+    top: 45%;
+    left: 35%;
+  }
+
 }
 
 
 // display for desktop screen size
-@media (min-width: 992px){
+@media only screen and (min-width: 992px){
   .background-carousel{
     width: 100%;
     height: 1030px;
@@ -270,7 +282,7 @@ p, ol {
 
   .frame-size {
     width: 100%;
-    height: 300px;
+    height: 700px;
   }
 
   .re-position {
@@ -293,10 +305,12 @@ p, ol {
     display: none;
   }
 
+
+
 }
 
 
-@media (min-width: 1200px){
+@media only screen and (min-width: 1200px){
   .background-carousel{
     width: 100%;
     height: 1150px;
